# Cognate

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
src/: App.tsx  app.js  db.d.ts  db.js  logger.js  main.js  main.tsx  state.js  store.test.ts  store.ts  style.css
src-tauri/: Cargo.toml  cargo_output.txt  err.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: integrations.rs  lib.rs  main.rs
src/components/: Analytics.tsx  Board.tsx  Logo.tsx  Pomodoro.tsx  Sidebar.tsx  TaskCard.tsx  Titlebar.tsx  Toast.tsx
src/components/Modals/: SettingsModal.tsx  TaskModal.tsx
src/hooks/: useShortcuts.ts  useTasks.ts  useTheme.ts  useVisibleTasks.ts
src/services/: taskService.ts
src/ui/: analytics.js  audio.js  board.js  export.js  modal.js  nav.js  pomodoro.js  settings.js  shortcuts.js  tags.js  theme.js  windowControls.js
src/utils/: audio.ts  export.ts  format.js  toast.d.ts  toast.js  toast.ts
tests/: calcPriority.test.js
