[package]
name    = "cognote"
version = "0.1.0"
description = "Cognote — Cross-platform Smart Task Manager"
authors = []
edition = "2021"
rust-version = "1.77.2"

# Shared library for mobile targets
[lib]
name       = "cognote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-sql          = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
